syntax = "proto3";

package tokens;

service Tokens {
    rpc verify (AccessToken) returns (TokenInfo) {}
}

message AccessToken {
    string token = 1;
}

message TokenInfo {
    string id = 1;
    string given_name = 2;
    string first_name = 3;
    string last_name = 4;
    repeated string roles = 5;
}