// Original file: proto/token.proto


export interface TokenInfo {
  'id'?: (string);
  'givenName'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'roles'?: (string)[];
}

export interface TokenInfo__Output {
  'id': (string);
  'givenName': (string);
  'firstName': (string);
  'lastName': (string);
  'roles': (string)[];
}
